--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  "config": { "ionic_manual_treeshaking": false},
   "dependencies": {
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
